# CarGameAI

./: Basic.shader  CMakeLists.txt  Main.cpp  MyOpenGL.sln  MyOpenGL.vcxproj  MyOpenGL.vcxproj.filters  README.md  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Vertexarray.cpp  Vertexarray.h
headers/: Car.h  CarGame.h  CarHandler.h  CudaKernels.cuh  GfxObject.h  Main.h  NetworkManager.h  NetworkUpdateEvent.h  NeuralCuda.h  NeuralNetwork.h  NeuralNetworkCuda.h  NeuralNetworkEigen.h  Renderer.h  Road.h  Shader.h  Vector2.h  VertexBufferLayout.h
shaders/: Basic.shader  Car.glsl  Road.glsl  Road.shader
src/: Car.cpp  CarGame.cpp  CarHandler.cpp  CudaKernels.cu  GfxObject.cpp  Main.cpp  NetworkManager.cpp  NetworkUpdateEvent.cpp  NeuralCuda.cu  NeuralNetwork.cpp  NeuralNetworkCuda.cu  NeuralNetworkEigen.cpp  Renderer.cpp  Road.cpp  Shader.cpp  Vertexarray.cpp
